--- a/style.css
+++ b/style.css
@@ -24,15 +24,15 @@ path.ema {
   display: none;
 }
 
-.annotation-line:nth-child(2) .callout path {
+.annotation-line:nth-child(2) .right-handle path {
   fill: #c00;
 }
 
-.annotation-line:nth-child(1) .callout path {
+.annotation-line:nth-child(1) .right-handle path {
   fill: rgb(26, 154, 249);
 }
 
-.callout text {
+.annotation-line text {
   font-size: 10px;
   font-family: sans-serif;
   fill: white;
