--- a/style.css
+++ b/style.css
@@ -39,18 +39,20 @@ path.ema {
   display: none;
 }
 
-path.callout:nth-child(2) {
+.callout:nth-child(2) path {
   fill: #c00;
 }
 
-path.callout:nth-child(1) {
+.callout:nth-child(1) path {
   fill: rgb(26, 154, 249);
 }
 
-text.callout {
+.callout text {
   font-size: 10px;
   font-family: sans-serif;
   fill: white;
+  text-anchor: end;
+  dominant-baseline: middle;
 }
 
 .legend-value {
