no MA during exchange close hours

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   /* https://stackoverflow.com/a/12070436/249933 */
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
+    Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
 }
 
@@ -59,6 +60,10 @@ path.ema {
 
 .volume {
   opacity: 0.2;
+}
+
+path.line {
+  stroke-width: 1.5px;
 }
 
 .callout:nth-child(2) path {
